actualizacion web tecnimotors

--- a/tecnimotors/src/app/auth/login/login.component.html
+++ b/tecnimotors/src/app/auth/login/login.component.html
@@ -1,45 +1,45 @@
 <!-- Start preloader -->
 <div id="preloader" #preloader>
   <div id="ctn-preloader" class="ctn-preloader">
-      <div class="animation-preloader">
-          <div class="spinner"></div>
-          <div class="txt-loading">
-              <span data-text-preloader="C" class="letters-loading">
-                  C
-              </span>
+    <div class="animation-preloader">
+      <div class="spinner"></div>
+      <div class="txt-loading">
+        <span data-text-preloader="C" class="letters-loading">
+          C
+        </span>
 
-              <span data-text-preloader="A" class="letters-loading">
-                  A
-              </span>
+        <span data-text-preloader="A" class="letters-loading">
+          A
+        </span>
 
-              <span data-text-preloader="R" class="letters-loading">
-                  R
-              </span>
+        <span data-text-preloader="R" class="letters-loading">
+          R
+        </span>
 
-              <span data-text-preloader="G" class="letters-loading">
-                  G
-              </span>
+        <span data-text-preloader="G" class="letters-loading">
+          G
+        </span>
 
-              <span data-text-preloader="A" class="letters-loading">
-                  A
-              </span>
+        <span data-text-preloader="A" class="letters-loading">
+          A
+        </span>
 
-              <span data-text-preloader="N" class="letters-loading">
-                  N
-              </span>
+        <span data-text-preloader="N" class="letters-loading">
+          N
+        </span>
 
-              <span data-text-preloader="D" class="letters-loading">
-                  D
-              </span>
+        <span data-text-preloader="D" class="letters-loading">
+          D
+        </span>
 
-              <span data-text-preloader="O" class="letters-loading">
-                  O
-              </span>
-          </div>
+        <span data-text-preloader="O" class="letters-loading">
+          O
+        </span>
       </div>
+    </div>
 
-      <div class="loader-section section-left"></div>
-      <div class="loader-section section-right"></div>
+    <div class="loader-section section-left"></div>
+    <div class="loader-section section-right"></div>
   </div>
 </div>
 <!-- End preloader -->
@@ -130,24 +130,15 @@
 
   <!-- Start shipping section -->
   <section class="shipping__section">
-    <div class="container">
-      <div class="shipping__inner style2 d-flex">
+    <div class="container" style="text-align: center;">
+      <div class="shipping__inner style2 d-flex" style="justify-content: center;justify-items: center;">
         <div class="shipping__items style2 d-flex align-items-center">
           <div class="shipping__icon">
             <img src="assets/img/other/shipping1.webp" alt="icon-img">
           </div>
           <div class="shipping__content">
-            <h2 class="shipping__content--title h3">Free Shipping</h2>
-            <p class="shipping__content--desc">Free shipping over $100</p>
-          </div>
-        </div>
-        <div class="shipping__items style2 d-flex align-items-center">
-          <div class="shipping__icon">
-            <img src="assets/img/other/shipping2.webp" alt="icon-img">
-          </div>
-          <div class="shipping__content">
-            <h2 class="shipping__content--title h3">Support 24/7</h2>
-            <p class="shipping__content--desc">Contact us 24 hours a day</p>
+            <h2 class="shipping__content--title h3">ENVIOS A TODO EL PERÚ</h2>
+            <p class="shipping__content--desc">Ofertas especiales para nuestros distribuidores</p>
           </div>
         </div>
         <div class="shipping__items style2 d-flex align-items-center">
@@ -155,17 +146,17 @@
             <img src="assets/img/other/shipping3.webp" alt="icon-img">
           </div>
           <div class="shipping__content">
-            <h2 class="shipping__content--title h3">100% Money Back</h2>
-            <p class="shipping__content--desc">You have 30 days to Return</p>
+            <h2 class="shipping__content--title h3">MEJORES PRECIOS</h2>
+            <p class="shipping__content--desc">Variedad de productos al mejor precio del mercado</p>
           </div>
         </div>
         <div class="shipping__items style2 d-flex align-items-center">
           <div class="shipping__icon">
-            <img src="assets/img/other/shipping4.webp" alt="icon-img">
+            <img src="assets/img/other/shipping2.webp" alt="icon-img">
           </div>
           <div class="shipping__content">
-            <h2 class="shipping__content--title h3">Payment Secure</h2>
-            <p class="shipping__content--desc">We ensure secure payment</p>
+            <h2 class="shipping__content--title h3">ATENCIÓN AL CLIENTE</h2>
+            <p class="shipping__content--desc">Atendemos vía online por WhatsApp o Correo Electrónico</p>
           </div>
         </div>
       </div>
