--- a/tecnimotors/src/app/filterbody/llantas/homellanta/homellanta.component.html
+++ b/tecnimotors/src/app/filterbody/llantas/homellanta/homellanta.component.html
@@ -52,7 +52,7 @@
     <!-- Start slider section -->
     <section class="hero__slider--section">
         <div class="slider__thumbnail--style5 position-relative">
-            <img class="slider__thumbnail--img__style5" src="assets/img/slider/home5-slider-thumb.webp"
+            <img class="slider__thumbnail--img__style5" src="assets/img/banner/tecnimotors/1_2.jpg"
                 alt="slider-img">
             <div class="hero__content--style5 text-center">
                 <!--<h2 class="hero__content--style5__title h1">Comes Width The <br> <span class="text__secondary">Ultimate Protection</span></h2>-->
@@ -61,9 +61,11 @@
             <div class="search__filter--section search__filter--style5">
                 <div class="container">
                     <div class="section__heading style2 text-center mb-30">
-                        <h2 class="section__heading--maintitle">Busqueda de Llantas</h2>
+                        <!--
+                        <h2 class="section__heading--maintitle" style="color:white">Busqueda de Llantas</h2>
                         <p class="section__heading--desc">Filtre sus resultados y asegúrese de encontrar las Medidas que
                             encajen.</p>
+                        -->
                     </div>
                     <div class="search__filter--inner style5">
                         <form class="search__filter--form__style2 d-flex">
