--- a/tecnimotors/src/app/filterbody/camaras/detallecamara/detallecamara.component.html
+++ b/tecnimotors/src/app/filterbody/camaras/detallecamara/detallecamara.component.html
@@ -148,7 +148,7 @@
                                         aria-label="Incrementar cantidad" (click)="AumentarCount()">+
                                     </button>
                                 </div>
-                                <button class="primary__btn quickview__cart--btn" type="submit">
+                                <button class="primary__btn quickview__cart--btn" type="submit" (click)="AgregarCarrito()">
                                     Agregar al carrito
                                 </button>
                             </div>
